pkg/db_driver/impl/oracle/lib/oracle_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/oracle.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class OracleBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OracleBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OracleBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Open an Oracle connection.
  ///
  /// Returns a non-zero handle on success.
  /// On error, returns 0 and sets *err_out to a newly allocated C string (free it via oracle_free_string).
  int oracle_open(
    ffi.Pointer<ffi.Char> dsn,
    ffi.Pointer<ffi.Pointer<ffi.Char>> err_out,
  ) {
    return _oracle_open(
      dsn,
      err_out,
    );
  }

  late final _oracle_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('oracle_open');
  late final _oracle_open = _oracle_openPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Close a connection handle (no-op if handle is invalid/closed).
  void oracle_close(
    int handle,
  ) {
    return _oracle_close(
      handle,
    );
  }

  late final _oracle_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('oracle_close');
  late final _oracle_close = _oracle_closePtr.asFunction<void Function(int)>();

  /// Open a query cursor and return a non-zero query handle on success.
  /// On error, returns 0 and sets *err_out to a newly allocated C string.
  int oracle_query_open(
    int handle,
    ffi.Pointer<ffi.Char> sql,
    ffi.Pointer<ffi.Pointer<ffi.Char>> err_out,
  ) {
    return _oracle_query_open(
      handle,
      sql,
      err_out,
    );
  }

  late final _oracle_query_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(ffi.Int64, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('oracle_query_open');
  late final _oracle_query_open = _oracle_query_openPtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Close a query cursor handle.
  void oracle_query_close(
    int query_handle,
  ) {
    return _oracle_query_close(
      query_handle,
    );
  }

  late final _oracle_query_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'oracle_query_close');
  late final _oracle_query_close =
      _oracle_query_closePtr.asFunction<void Function(int)>();

  /// Fetch query header struct.
  ffi.Pointer<oracle_query_header_t> oracle_query_header(
    int query_handle,
    ffi.Pointer<ffi.Pointer<ffi.Char>> err_out,
  ) {
    return _oracle_query_header(
      query_handle,
      err_out,
    );
  }

  late final _oracle_query_headerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<oracle_query_header_t> Function(ffi.Int64,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('oracle_query_header');
  late final _oracle_query_header = _oracle_query_headerPtr.asFunction<
      ffi.Pointer<oracle_query_header_t> Function(
          int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Fetch next batch rows as struct.
  ffi.Pointer<oracle_query_batch_t> oracle_query_next_batch(
    int query_handle,
    int batch_size,
    ffi.Pointer<ffi.Pointer<ffi.Char>> err_out,
  ) {
    return _oracle_query_next_batch(
      query_handle,
      batch_size,
      err_out,
    );
  }

  late final _oracle_query_next_batchPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<oracle_query_batch_t> Function(ffi.Int64, ffi.Int32,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('oracle_query_next_batch');
  late final _oracle_query_next_batch = _oracle_query_next_batchPtr.asFunction<
      ffi.Pointer<oracle_query_batch_t> Function(
          int, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Free a C string returned by this library.
  void oracle_free_string(
    ffi.Pointer<ffi.Char> s,
  ) {
    return _oracle_free_string(
      s,
    );
  }

  late final _oracle_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'oracle_free_string');
  late final _oracle_free_string =
      _oracle_free_stringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Free query header/batch structs returned by this library.
  void oracle_query_free_header(
    ffi.Pointer<oracle_query_header_t> header,
  ) {
    return _oracle_query_free_header(
      header,
    );
  }

  late final _oracle_query_free_headerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<oracle_query_header_t>)>>('oracle_query_free_header');
  late final _oracle_query_free_header = _oracle_query_free_headerPtr
      .asFunction<void Function(ffi.Pointer<oracle_query_header_t>)>();

  void oracle_query_free_batch(
    ffi.Pointer<oracle_query_batch_t> batch,
  ) {
    return _oracle_query_free_batch(
      batch,
    );
  }

  late final _oracle_query_free_batchPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<oracle_query_batch_t>)>>('oracle_query_free_batch');
  late final _oracle_query_free_batch = _oracle_query_free_batchPtr
      .asFunction<void Function(ffi.Pointer<oracle_query_batch_t>)>();
}

final class oracle_query_value_t extends ffi.Struct {
  @ffi.Int32()
  external int kind;

  @ffi.Int64()
  external int int_value;

  @ffi.Uint64()
  external int uint_value;

  @ffi.Float()
  external double float_value;

  @ffi.Double()
  external double double_value;

  @ffi.Int64()
  external int datetime_value;

  external ffi.Pointer<ffi.Uint8> bytes_value;

  @ffi.Int32()
  external int bytes_len;
}

final class oracle_query_row_t extends ffi.Struct {
  external ffi.Pointer<oracle_query_value_t> values;

  @ffi.Int32()
  external int value_count;
}

final class oracle_query_column_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  external ffi.Pointer<ffi.Char> column_type;
}

final class oracle_query_header_t extends ffi.Struct {
  external ffi.Pointer<oracle_query_column_t> columns;

  @ffi.Int32()
  external int column_count;

  @ffi.Int64()
  external int affected_rows;
}

final class oracle_query_batch_t extends ffi.Struct {
  external ffi.Pointer<oracle_query_row_t> rows;

  @ffi.Int32()
  external int row_count;

  @ffi.Int32()
  external int done;
}
